# dioxus-android-sample

./: Cargo.toml  README.md  mobile.toml
src/: lib.rs
